--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mongoose": "^4.11.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
